--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -30,7 +30,7 @@
 							<a class="nav-link" href="/home">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/predict">Predict</a>
+							<a class="nav-link" href="/model">Predict</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/training">Training</a>
@@ -40,7 +40,7 @@
 			</div>
 		</nav>
 		<!-- End of Navbar -->
-		<br/>
+		<br />
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
