--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,39 +9,28 @@
 	<title>MDM Python Projekt</title>
 	%sveltekit.head%
 </head>
-
 <body data-sveltekit-preload-data="hover">
-
-	<div style="display: contents">
-
 		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg" style="background-color: MistyRose;">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/home">MDM Python Projekt</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<nav class="navbar navbar-expand-lg">
+			<div class="container-fluid justify-content-between">
+				<a class="navbar-brand" href="/">MDM Python Projekt</a>
+				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="/home">Home</a>
+							<a class="nav-link active" href="/model">Predict</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/model">Predict</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/training">Training</a>
+							<a class="nav-link active" href="/training">Training</a>
 						</li>
 					</ul>
 				</div>
 			</div>
+			<img src="./sbb_logo.png" height="24">
 		</nav>
 		<!-- End of Navbar -->
+		<div style="height: 50px; background-color: rgb(235 0 0);"></div> <!--roter SBB Balken-->
 		<br />
 		<div style="display: contents">%sveltekit.body%</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
