Changed some files

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -27,7 +27,7 @@
 			</div>
 			<img src="./sbb_logo.png" height="24">
 		</nav>
-		<!-- End of Navbar -->
+		<!-- Ende Navbar -->
 		<div style="height: 50px; background-color: rgb(235 0 0);"></div> <!--roter SBB Balken-->
 		<br />
 		<div style="display: contents">%sveltekit.body%</div>
